# actix-sse-example

./: Cargo.toml  readme.md
src/: broadcast.rs  main.rs
